hamburger menu cut off fix

--- a/src/styles/hamburger.css
+++ b/src/styles/hamburger.css
@@ -26,7 +26,7 @@ input[type="checkbox"]:checked~.container {
 }
 
 .container-button {
-    top: 5%;
+    top: 8%;
 }
 
 .extra-space {
