--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -43,6 +43,7 @@
   .navbar_container {
     min-width: 100%;
     max-width: 100%;
+    height: 320px;
     position: relative;
     margin: 0;
     overflow: hidden;
